[package]
name = "rustygitprompt"
version = "0.1.0"
authors = ["Mikołaj Baranowski <mikolajb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.11"
ansi_term = "0.12"
tempfile = "3"
clap = "2.33"
lazy_static = "1.4"
