[package]
name = "rustygitprompt"
version = "0.1.1"
authors = ["Mikołaj Baranowski <mikolajb@gmail.com>"]
description = "A simple git prompt in rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17"
ansi_term = "0.12"
tempfile = "3"
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
